--- a/app/src/main/res/layout/card_file.xml
+++ b/app/src/main/res/layout/card_file.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?><!-- The main view for the ViewHolder of the RecyclerView -->
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv_file"
     android:layout_width="match_parent"
@@ -14,7 +15,8 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/cv_fl_base_card"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/fc_padding">
 
         <!-- File name -->
         <!-- Gravity "start" in stead of "left".
@@ -24,38 +26,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:textSize="@dimen/fc_large_text"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <!-- Description of the file -->
         <TextView
-            android:id="@+id/tv_card_description"
+            android:id="@+id/tv_card_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/file_description"
+            android:text="@string/file_location"
             android:textSize="@dimen/fc_small_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_card_title" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_card_title"/>
 
         <!-- Details of the file -->
+        <!-- TODO: Remove invisibility is details should be used! -->
         <TextView
             android:id="@+id/tv_card_more_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
             android:text="@string/file_more_details"
             app:layout_constraintBottom_toBottomOf="@+id/cv_fl_base_card"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_card_description" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_card_location"
+            android:visibility="gone"/>
 
         <!-- Include file detail content -->
         <include
@@ -63,6 +60,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="@id/cv_fl_base_card"
-            app:layout_constraintTop_toBottomOf="@+id/tv_card_description" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_card_location"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
