--- a/app/src/main/res/layout/card_file_detail.xml
+++ b/app/src/main/res/layout/card_file_detail.xml
@@ -29,7 +29,7 @@
         android:layout_marginBottom="8dp"
         android:text="@string/file_added_on"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_card_last_opened" />
+        app:layout_constraintStart_toStartOf="parent"/>
+        <!--app:layout_constraintTop_toBottomOf="@+id/tv_card_last_opened"/> -->
 
 </android.support.constraint.ConstraintLayout>
