--- a/app/src/main/res/layout/card_file.xml
+++ b/app/src/main/res/layout/card_file.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cv_file"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/cv_file"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/fc_margin_horizontal"
@@ -41,6 +41,16 @@
             android:textSize="@dimen/fc_small_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_card_title"/>
+
+        <ImageView
+            android:id="@+id/iv_icon"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="fitEnd"
+            app:layout_constraintStart_toStartOf="@id/cv_fl_base_card"
+            app:layout_constraintTop_toTopOf="@id/cv_fl_base_card"
+            app:layout_constraintBottom_toBottomOf="@id/cv_fl_base_card"
+            app:layout_constraintEnd_toEndOf="@id/cv_fl_base_card"/>
 
         <!-- Details of the file -->
         <!-- TODO: Remove invisibility is details should be used! -->
