--- a/app/src/main/res/layout/activity_plugin_failed.xml
+++ b/app/src/main/res/layout/activity_plugin_failed.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="12dp"
         android:text="@string/plugin_processing_failed"
         android:textSize="@dimen/text_failed_plugin"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,10 +22,12 @@
 
     <TextView
         android:id="@+id/tv_reason"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/text_failed_plugin"
+        android:text="TESTj aezrkbaezrbaezofneazobf eozn faezn feozaaf oeazn feoaz goren gorebg poertb gbr goprb"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_plugin_failed"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_plugin_failed" android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.0"/>
 </android.support.constraint.ConstraintLayout>
