--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,7 +29,7 @@
             android:id="@+id/rv_files"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/background_gradient"
+            android:background="@drawable/background"
             android:clipToPadding="false"
             android:paddingBottom="20dp" />
 
@@ -38,7 +38,7 @@
             android:id="@+id/cl_empty_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/background"
             android:visibility="gone">
 
             <!-- TextView which is visible when the RecyclerView is empty -->
