--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#38006b</color>
     <color name="colorPrimaryDark">#1B0036</color>
-    <color name="colorPrimaryLight">#9c4dcc</color>
+    <color name="colorPrimaryLight">#F1EAFF</color>
     <color name="colorButton">#6a1b9a</color>
     <color name="colorAccent1">#0e8884</color>
     <color name="colorAccent2">#D50000</color>
