--- a/app/src/main/res/layout/card_file.xml
+++ b/app/src/main/res/layout/card_file.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_file"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <!--android:layout_marginLeft="@dimen/fc_margin_horizontal"-->
-    <!--android:layout_marginTop="@dimen/fc_margin_vertical"-->
-    <!--android:layout_marginRight="@dimen/fc_margin_horizontal">-->
-    <!--app:cardCornerRadius="@dimen/fc_corner_radius"-->
-    <!--app:cardElevation="@dimen/fc_elevation">-->
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/fc_margin_horizontal"
+    android:layout_marginTop="@dimen/fc_margin_vertical"
+    android:layout_marginRight="@dimen/fc_margin_horizontal"
+    app:cardCornerRadius="@dimen/fc_corner_radius"
+    app:cardElevation="@dimen/fc_elevation">
 
     <!-- This LinearLayout holds the whole content of the cardview -->
     <android.support.constraint.ConstraintLayout
