--- a/app/src/main/res/layout/plugin_alert_dialog_adapter_row.xml
+++ b/app/src/main/res/layout/plugin_alert_dialog_adapter_row.xml
@@ -1,41 +1,54 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     android:padding="8dp">
-
 
     <ImageView
         android:id="@+id/pluginChooserDialogItemLogoItemImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:adjustViewBounds="true"
+        android:contentDescription="@string/plugin_logo_description"
         android:maxWidth="64dp"
         android:maxHeight="64dp"
         android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher"/>
+        app:layout_constraintBottom_toTopOf="@+id/pluginChooserDialogItemNameTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pluginChooserDialogItemDescriptionTextView" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/pluginChooserDialogItemNameTextView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="8dp">
-        <TextView
-            android:id="@+id/pluginChooserDialogItemNameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scrollHorizontally="false"
-            android:text="@string/plugin_name"
-            android:textSize="20sp"/>
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:scrollHorizontally="false"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/pluginChooserDialogItemLogoItemImageView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/plugin_name" />
 
-        <TextView
-            android:id="@+id/pluginChooserDialogItemDescriptionTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scrollHorizontally="false"
-            android:text="@string/plugin_description"
-            android:textSize="14sp"/>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/pluginChooserDialogItemDescriptionTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:scrollHorizontally="false"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/pluginChooserDialogItemLogoItemImageView"
+        app:layout_constraintTop_toBottomOf="@+id/pluginChooserDialogItemNameTextView"
+        tools:text="@string/plugin_description" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
