--- a/app/src/main/res/layout/activity_plugin_failed.xml
+++ b/app/src/main/res/layout/activity_plugin_failed.xml
@@ -23,11 +23,19 @@
     <TextView
         android:id="@+id/tv_reason"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:textSize="@dimen/text_failed_plugin"
-        android:text="TESTj aezrkbaezrbaezofneazobf eozn faezn feozaaf oeazn feoaz goren gorebg poertb gbr goprb"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_plugin_failed" android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.0"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_plugin_failed"
+        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+         reprehenderit in voluptate velit esse cillum dolore eu fugiat
+         nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+         sunt in culpa qui officia deserunt mollit anim id est laborum." />
 </android.support.constraint.ConstraintLayout>
