--- a/app/src/main/res/layout/card_file.xml
+++ b/app/src/main/res/layout/card_file.xml
@@ -47,30 +47,11 @@
             android:id="@+id/iv_icon"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:contentDescription="@string/plugin_logo_description"
             android:scaleType="fitEnd"
             app:layout_constraintBottom_toBottomOf="@id/cv_fl_base_card"
             app:layout_constraintEnd_toEndOf="@id/cv_fl_base_card"
             app:layout_constraintStart_toStartOf="@id/cv_fl_base_card"
             app:layout_constraintTop_toTopOf="@id/cv_fl_base_card" />
-
-        <!-- Details of the file -->
-        <!-- TODO: Remove invisibility if details should be used! -->
-        <TextView
-            android:id="@+id/tv_card_more_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/file_more_details"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/cv_fl_base_card"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_card_location" />
-
-        <!-- Include file detail content -->
-        <include
-            layout="@layout/card_file_detail"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="@id/cv_fl_base_card"
-            app:layout_constraintTop_toBottomOf="@+id/tv_card_location" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
