--- a/app/src/main/res/layout/card_file.xml
+++ b/app/src/main/res/layout/card_file.xml
@@ -1,5 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?><!-- The main view for the ViewHolder of the RecyclerView -->
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<!-- The main view for the ViewHolder of the RecyclerView -->
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_file"
@@ -7,9 +9,7 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/fc_margin_horizontal"
     android:layout_marginTop="@dimen/fc_margin_vertical"
-    android:layout_marginRight="@dimen/fc_margin_horizontal"
-    app:cardCornerRadius="@dimen/fc_corner_radius"
-    app:cardElevation="@dimen/fc_elevation">
+    android:layout_marginRight="@dimen/fc_margin_horizontal">
 
     <!-- This LinearLayout holds the whole content of the cardview -->
     <android.support.constraint.ConstraintLayout
@@ -30,7 +30,7 @@
             android:textSize="@dimen/fc_large_text"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <!-- Description of the file -->
         <TextView
@@ -41,7 +41,7 @@
             android:text="@string/file_last"
             android:textSize="@dimen/fc_small_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_card_title" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_card_title"/>
 
         <ImageView
             android:id="@+id/iv_icon"
@@ -51,7 +51,7 @@
             app:layout_constraintBottom_toBottomOf="@id/cv_fl_base_card"
             app:layout_constraintEnd_toEndOf="@id/cv_fl_base_card"
             app:layout_constraintStart_toStartOf="@id/cv_fl_base_card"
-            app:layout_constraintTop_toTopOf="@id/cv_fl_base_card" />
+            app:layout_constraintTop_toTopOf="@id/cv_fl_base_card"/>
 
         <!-- Details of the file -->
         <!-- TODO: Remove invisibility if details should be used! -->
@@ -63,7 +63,7 @@
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/cv_fl_base_card"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_card_location" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_card_location"/>
 
         <!-- Include file detail content -->
         <include
@@ -71,6 +71,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="@id/cv_fl_base_card"
-            app:layout_constraintTop_toBottomOf="@+id/tv_card_location" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_card_location"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
